# hotel-demo

./: .gitignore  .vercelignore  README.md  main.py  next.config.ts  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
app/: globals.css  layout.tsx  page.tsx
app/api/debug/: route.ts
app/chat/: page.tsx
app/configuracion/: page.tsx
app/documentos/: page.tsx
app/emision/: page.tsx
backend/: .env.example  config.json  generar_facturas.py  main.py  motor.py  pyproject.toml  requirements.txt  test_motor.py
components/: Sidebar.tsx
lib/: api.ts
