[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-demo"
version = "1.0.0"
description = "Hotel document classification system"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pdfplumber",
    "reportlab",
    "google-genai",
    "python-multipart",
    "python-dotenv"
]

[project.scripts]
app = "backend.motor:app"
